--- a/untitled/index.html
+++ b/untitled/index.html
@@ -41,15 +41,50 @@
 </head>
 
 <body>
+    <!-- A grey horizontal navbar that becomes vertical on small screens -->
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 
-</body>
+        <!-- Links -->
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a id = "checkRecipes" class="nav-link">Check out our recipes</a>
+            </li>
+            <li class="nav-item">
+                <a id = "enterRecipes" class="nav-link" href="enterRecipes.html" >Add your recipe</a>
+            </li>
+        </ul>
 
-<body>
-
+    </nav>
     <div class="jumbotron text-center">
-        <h1>Assigmment 2</h1>
+        <h1>Create a recipe with what you have in your fridge!</h1>
     </div>
 
-    <button onclick = "addData(jasonObj)"> Submit</button>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="img/beef.png" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="img/carrots.png" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="img/mush.png" alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
 </body>
 </html>
