created dynamic options creation

--- a/untitled/enterRecipes.html
+++ b/untitled/enterRecipes.html
@@ -54,11 +54,6 @@
                         <div class = "form-group">
                             <select class = "form-control" id ="ingredient1">
                                 <option value selected ="selected"> Select an ingredient </option>
-                                <option value="Chicken breasts">Chicken Breasts</option>
-                                <option value="Rotisserie Chicken">Rotisserie Chicken</option>
-                                <option value="Ground beef">Ground beef</option>
-                                <option value="Shrimp">Shrimp</option>
-                                <option value="Pork">Pork</option>
                             </select>
                         </div>
                     </form>
@@ -70,9 +65,6 @@
                         <div class = "form-group">
                             <select class = "form-control" id ="ingredient2">
                                 <option value selected ="selected"> Select an ingredient </option>
-                                <option value="Mushroom">Mushroom</option>
-                                <option value="Black Beans"> Black Beans</option>
-                                <option value="three">three</option>
                             </select>
                         </div>
                     </form>
@@ -84,9 +76,6 @@
                         <div class = "form-group">
                             <select class = "form-control" id = "ingredient3">
                                 <option value selected ="selected"> Select an ingredient </option>
-                                <option value="one">one</option>
-                                <option value="two">two</option>
-                                <option value="three">three</option>
                             </select>
                         </div>
                     </form>
@@ -98,5 +87,6 @@
                 <input id = "recipeLink" type="text" class="form-control-plaintext" placeholder= "Enter your recipe's link">
             <button onclick = 'readData()' > Submit </button>
         </div>
+        <div id ="demo"> </div>
 </body>
 </html>
