--- a/untitled/enterRecipes.html
+++ b/untitled/enterRecipes.html
@@ -52,13 +52,8 @@
                 <div class = "row">
                     <form class = "form-inline">
                         <div class = "form-group">
-                            <select class = "form-control" id ="ingredient1">
+                            <select class = "custom-select" id ="ingredient1">
                                 <option value selected ="selected"> Select an ingredient </option>
-                                <option value="Chicken breasts">Chicken Breasts</option>
-                                <option value="Rotisserie Chicken">Rotisserie Chicken</option>
-                                <option value="Ground beef">Ground beef</option>
-                                <option value="Shrimp">Shrimp</option>
-                                <option value="Pork">Pork</option>
                             </select>
                         </div>
                     </form>
@@ -68,35 +63,32 @@
                 <div class = "row">
                     <form class = "form-inline">
                         <div class = "form-group">
-                            <select class = "form-control" id ="ingredient2">
+                            <select class = "custom-select" id ="ingredient2">
                                 <option value selected ="selected"> Select an ingredient </option>
-                                <option value="Mushroom">Mushroom</option>
-                                <option value="Black Beans"> Black Beans</option>
-                                <option value="three">three</option>
                             </select>
                         </div>
                     </form>
                 </div>
 
             <h3> And your third ingredient</h3>
-                `<div class = "row">
+                <div class = "row">
                     <form class = "form-inline">
                         <div class = "form-group">
-                            <select class = "form-control" id = "ingredient3">
+                            <select class = "custom-select" id = "ingredient3">
                                 <option value selected ="selected"> Select an ingredient </option>
-                                <option value="one">one</option>
-                                <option value="two">two</option>
-                                <option value="three">three</option>
                             </select>
                         </div>
                     </form>
-                </div>`
+                </div>
 
             <h3> Give your recipe a name </h3>
                 <input id = "recipeName" type="text" class="form-control-plaintext" placeholder= "Enter your recipe's name">
             <h3> And give us the link to the website where you found it </h3>
                 <input id = "recipeLink" type="text" class="form-control-plaintext" placeholder= "Enter your recipe's link">
-            <button onclick = 'readData()' > Submit </button>
+            <button onclick = 'saveData()' > Submit </button>
         </div>
+        <div id ="demo"> </div>
 </body>
+  
+<body onload = "readData()"> </body>
 </html>
