--- a/untitled/index.html
+++ b/untitled/index.html
@@ -48,32 +48,20 @@
         <h1>Create a recipe with what you have in your fridge!</h1>
     </div>
 
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="img/beef.png" alt="First slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="img/carrots.png" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="img/mush.png" alt="Third slide">
-            </div>
+    <div class = "container" id = "mainText">
+      <div class = "row">
+        <div class = col-md-4 id ="choice1">
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+        <div class = col-md-4 id ="choice2">
+        </div>
+        <div class = col-md-4 id ="choice3">
+        </div>
+      </div>
+      <div class ="row">
+        <button type="button" class="btn btn-primary" onclick = "changeChoices(ingredientArrayWithoutDupes)">Next</button>
+      </div>
     </div>
 
 </body>
+<body onload = "readData()"> </body> 
 </html>
