--- a/untitled/enterRecipes.html
+++ b/untitled/enterRecipes.html
@@ -52,7 +52,7 @@
                 <div class = "row">
                     <form class = "form-inline">
                         <div class = "form-group">
-                            <select class = "form-control" id ="ingredient1">
+                            <select class = "custom-select" id ="ingredient1">
                                 <option value selected ="selected"> Select an ingredient </option>
                             </select>
                         </div>
@@ -63,7 +63,7 @@
                 <div class = "row">
                     <form class = "form-inline">
                         <div class = "form-group">
-                            <select class = "form-control" id ="ingredient2">
+                            <select class = "custom-select" id ="ingredient2">
                                 <option value selected ="selected"> Select an ingredient </option>
                             </select>
                         </div>
@@ -71,22 +71,24 @@
                 </div>
 
             <h3> And your third ingredient</h3>
-                `<div class = "row">
+                <div class = "row">
                     <form class = "form-inline">
                         <div class = "form-group">
-                            <select class = "form-control" id = "ingredient3">
+                            <select class = "custom-select" id = "ingredient3">
                                 <option value selected ="selected"> Select an ingredient </option>
                             </select>
                         </div>
                     </form>
-                </div>`
+                </div>
 
             <h3> Give your recipe a name </h3>
                 <input id = "recipeName" type="text" class="form-control-plaintext" placeholder= "Enter your recipe's name">
             <h3> And give us the link to the website where you found it </h3>
                 <input id = "recipeLink" type="text" class="form-control-plaintext" placeholder= "Enter your recipe's link">
-            <button onclick = 'readData()' > Submit </button>
+            <button onclick = 'saveData()' > Submit </button>
         </div>
         <div id ="demo"> </div>
 </body>
+  
+<body onload = "readData()"> </body>
 </html>
