--- a/untitled/index.html
+++ b/untitled/index.html
@@ -58,7 +58,7 @@
         </div>
       </div>
       <div class ="row">
-        <button type="button" class="btn btn-primary" onclick = "changeChoices(ingredientArrayWithoutDupes)">Next</button>
+        <button id = "button" type="button" class="btn btn-primary" onclick = "changeChoices(ingredientArrayWithoutDupes)">Next</button>
       </div>
     </div>
 
