--- a/untitled/index.html
+++ b/untitled/index.html
@@ -50,11 +50,25 @@
 
     <div class = "container" id = "mainText">
       <div class = "row">
-        <div class = col-md-4 id ="choice1">
+        <div class = col-md-4 id ="img1">
         </div>
-        <div class = col-md-4 id ="choice2">
+        <div class = col-md-4 id ="img2">
         </div>
-        <div class = col-md-4 id ="choice3">
+        <div class = col-md-4 id ="img3">
+        </div>
+      </div>
+      <div class = "row">
+        <div class = col-md-1>
+        </div>
+        <div class = col-md-2 id ="choice1">
+        </div>
+        <div class = col-md-3>
+        </div>
+        <div class = col-md-2 id ="choice2">
+        </div>
+        <div class = col-md-2>
+        </div>
+        <div class = col-md-2 id ="choice3">
         </div>
       </div>
       <div class ="row">
