--- a/untitled/index.html
+++ b/untitled/index.html
@@ -62,7 +62,7 @@
         </div>
         <div class = col-md-2 id ="choice1">
         </div>
-        <div class = col-md-3>
+        <div class = col-md-2>
         </div>
         <div class = col-md-2 id ="choice2">
         </div>
@@ -72,7 +72,13 @@
         </div>
       </div>
       <div class ="row">
-        <button id = "button" type="button" class="btn btn-primary" onclick = "changeChoices(ingredientArrayWithoutDupes)">Next</button>
+        <div class = col-md-5> 
+        </div>
+        <div class = col-md-4> 
+          <button id = "button" type="button" class="btn btn-primary" onclick = "changeChoices(ingredientArrayWithoutDupes)">Next</button>
+        </div>
+        <div class = col-md-4> 
+        </div>
       </div>
     </div>
 
